--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <div class="back-button">
-        <button onclick="window.location.href='https://abdelrahmanbenmoulai.github.io/abdelrahman-benmoulai/projects.html'">Back to Projects</button>
+        <button onclick="window.location.href=''">Back to Projects</button>
     </div>
     <div class="calculator">
         <div class="display">
-            <input type="text" id="result" readonly>
+            <label for="result" class="visually-hidden">Calculator Display</label>
+            <input type="text" id="result" readonly placeholder="0">
         </div>
         <div class="buttons">
             <button class="clear">C</button>
