--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="back-button">
-        <button onclick="window.location.href='https://abdelrahmanbenmoulai.github.io/abdelrahman-benmoulai/projects.html'">Back to Projects</button>
+        <button onclick="window.location.href=''">Back to Projects</button>
     </div>
     <div class="calculator">
         <div class="display">
